Implement DELETE /user API for cleaning user info #57
